[package]
name = "pactical"
version = "0.1.0"
authors = ["David Mitchell <monch1962@gmail.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
handlebars = "2.0.2"
chrono = "0.4.9"
Inflector = "0.11.4"
rand = "0.7.2"
rand_regex = "0.12.0"
regex-syntax = "0.6.12"
regex = "1.3.1"